@@ -1,6 +1,7 @@
 * growable-forms: on_add_mod_url handler function could cancel the add action if return empty value
 * growable-forms: add_link does not have to be enclosed in div or span
 * improvements to data layer - allow different config for every connection
+* fix sql escaping for sqlite
 
 Version 2.3.0
 ==============
